--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <title>Frontend Mentor | Social links profile</title>
   </head>
   <body>
     <div class="card">
       <div class="profilepicture">
-        <img src="./assets/images/avatar-jessica.jpeg" />
+        <img src="avatar-jessica.jpeg" />
       </div>
 
       <div class="profilecontainer">
